--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>page2-La Chouette Agence - Entreprise de web design à Lyon</title>
 
     
 <!-- Analytics -->
@@ -45,8 +45,7 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-					</li>
+					
 					<li>
 						<a href="page2.html">page2 &gt;</a>
 					</li>
