--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
                     <li>
-						<a href="page2.html">next</a>
+						<a href="page2.html">next.</a>
 					</li>
 				</ul>
 			</div>
