--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="description" content="Votre entreprise de web design à lyon - La Chouette Agence vous apporte son expertise en web design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -80,7 +81,10 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2> La chouette agence est une entreprise de web design située à Lyon qui
+					aide <br>les
+					entreprises à devenir attractives et visibles sur internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
