--- a/page2.html
+++ b/page2.html
@@ -94,10 +94,14 @@
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="formul">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<select name="formul" id="formul">
+							<option value="connaissance"> amis</option>
+							<option value="web" selected> Internet</option>
+							<option value="réseaux sociaux"> facebook</option>
+						</select>
 					</div>
 					<div class="form-group">
 						<label>
