--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="Votre entreprise de web design à lyon - La Chouette Agence vous apporte son expertise en web design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow" />
+	<meta name="googlebot" content="index,follow" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
