--- a/contact.html
+++ b/contact.html
@@ -35,20 +35,18 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+				<img src="img/la-chouette-agence.png" alt="atlanta web design logo" />
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li>
+				    <li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">contact</a>
+			         <li>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -94,16 +92,15 @@
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label for="formul">
-							Comment nous avez-vous connu ?
-						</label>
-						    <select name="formul" id="formul">
-							     <option value="connaissance"> amis</option>
-							     <option value="web" selected> Internet</option>
-							     <option value="réseaux sociaux"> facebook</option>
-						    </select>
+						<label for="exampleFormControlSelect1">Example select</label>
+						<select class="form-control" id="exampleFormControlSelect1">
+						  <option>amis</option>
+						  <option>facebook</option>
+						  <option>google</option>
+						  <option>tv</option>
+					    </select>
+					  </div>
 					
-					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
