--- a/index.html
+++ b/index.html
@@ -38,23 +38,24 @@
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
         <nav class="navbar row">
-			<div class="navbar-header">
-			    <img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" /></div>
-                <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
-			         <li>
-						<a href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
+			<nav class="navbar row">
+				<div class="navbar-header">
+					<img src="img/la-chouette-agence.png" alt="atlanta web design logo" />
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<ul class="site-navigation nav navbar-nav">
+						<li>
+							<a href="index.html">Accueil</a>
+						</li>
+						 <li>
+							<a href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 	</div>
 </div>
 <!-- bloc-0 END -->
@@ -216,7 +217,7 @@
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
